Added basecss File
Added a base css file, removed css from htmls

--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
-<style>
-    .wrapper{
-        width: 100%;
-        background-color: black;
-    }
-    .top-banner{
-        display: table-cell;
-        padding: 5px;
-        color: rgb(252,206,1);
-        font-size: 30px;
-        font-weight: bold;
-        vertical-align: middle;
-    }
-    .logo{
-        width: 60px;
-    }
-</style>
+
+{% load static %}
+    <link href= "{% static 'admin_back/basecss.css'%}" rel="stylesheet">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
