--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -7,11 +7,6 @@
 <html>
 <title>Voting Booth</title>
 <meta charset="UTF-8">
-<style>
-    body, h1, h2, h3, h4, h5 {
-        font-family: "Raleway", sans-serif
-    }
-</style>
 <body class="w3-light-grey">
 
 <div class="w3-content" style="max-width:1400px">
@@ -35,7 +30,7 @@
                         <input class="w3-input" type="text" name="choice2text" placeholder="Choice 2">
 
                         <div class="w3-row w3-padding-large">
-                            <button id="AddChoice" onclick="AddChoiceField()" class="w3-button w3-margin"><span
+                            <button id="AddChoice" onclick="AddChoiceField()" class="w3-button w3-margin" style="width: 130px"><span
                                     class="glyphicon glyphicon-plus-sign"></span> Add Choices
                             </button>
                             <br>
