--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -4,67 +4,18 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
+    <link href= "{% static 'admin_back/basecss.css'%}" rel="stylesheet">
 <style>
-    body{
-        font-family: Open Sans;
-        text-align: center;
-        }
-    input{
-        font-size: 20px;
-    }
     input::placeholder {
-         text-align: center;
-    }
-    button{
-        font-size: 20px;
-        color: black;
-        background-color: rgb(252,206,1);
-        border: solid black 2px;
-        transition: 0.3s;
-         width: 245px;
-    }
-    .button:hover {
-        color: white;
-        background-color: black;
-        text-decoration: underline;
-    }
-    input{
-        border: solid black 2px;
-    }
-    .wrapper{
-        width: 100%;
-        background-color: black;
-    }
-    .top-banner{
-        display: table-cell;
-        padding-top: 7px;
-        padding-left: 7px;
-        padding-right: 17px;
-        color: rgb(252,206,1);
-        font-size: 30px;
-        font-weight: bold;
-        vertical-align: middle;
-    }
-    .welcome{
-        margin-top: 20px;
-        font-size: 40px;
-    }
-    .text{
-        margin-top: 10px;
-        font-size: 20px;
-    }
-    .login{
-        margin-top: 20px;
-        }
-    .logo{
-        width: 60px;
+    text-align: center;
     }
 </style>
 <head>
     <meta charset="UTF-8">
     <title>Voting Booth Backend</title>
 </head>
-<body>
+<body style="text-align: center">
 {#    removing as this is provided by base now#}
 {#    <div class="wrapper">#}
 {#        <div class="top-banner">#}
