demo login page file structure for putting staticfiles

--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -30,8 +30,8 @@
              <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
              <div class="card-body">
              <h4 class="card-title">Create Survey</h4>
-             <p class="card-text">Write something describing Create survey</p>
-             <a href="#" class="btn btn-dark">View details</a>
+             <p class="card-text">Each survey taken should have a unique Id for it. Id should be an integer numbers only</p>
+             <a href="http://127.0.0.1:8000/admin/create_survey/" class="btn btn-dark">View details</a>
              </div>
         </div>
      </div>
@@ -41,8 +41,8 @@
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
             <div class="card-body">
             <h4 class="card-title">Create Question</h4>
-            <p class="card-text">Write something describing Create Question</p>
-            <a href="#" class="btn btn-dark">View details</a>
+            <p class="card-text">Before creating a any new question make sure you have a survey id attached to it.</p>
+            <a href="http://127.0.0.1:8000/admin/create_question/1/" class="btn btn-dark">View details</a>
             </div>
          </div>
     </div>
@@ -51,8 +51,8 @@
          <div class="card" style="width:250px">
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
             <div class="card-body">
-            <h4 class="card-title">Check Active Questions</h4>
-            <p class="card-text">Write something describing "what is active question?"</p>
+            <h4 class="card-title">Manage Questions</h4>
+            <p class="card-text">You can select any number of question you want and publish them for polls.</p>
             <a href="#" class="btn btn-dark">View details</a>
          </div>
         </div>
@@ -63,7 +63,7 @@
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
             <div class="card-body">
             <h4 class="card-title">Check Results</h4>
-            <p class="card-text">Write something describing results</p>
+            <p class="card-text">You can check the results for the survey.The results will shown in percent for each given choice</p>
             <a href="#" class="btn btn-dark">View details</a>
          </div>
         </div>
