--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -27,7 +27,10 @@
     <div class="row">
      <div class="col-sm-3">
         <div class="card" style="width:250px">
+
+             <a href="http://127.0.0.1:8000/admin/create_survey/">
              <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
+             </a>
              <div class="card-body">
              <h4 class="card-title">Create Survey</h4>
              <p class="card-text">Each survey taken should have a unique Id for it. Id should be an integer numbers only</p>
@@ -38,10 +41,12 @@
 
     <div class="col-sm-3">
         <div class="card" style="width:250px">
+            <a href="http://127.0.0.1:8000/admin/create_question/1/">
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
+            </a>
             <div class="card-body">
             <h4 class="card-title">Create Question</h4>
-            <p class="card-text">Before creating a any new question make sure you have a survey id attached to it.</p>
+            <p class="card-text">Before creating any new question make sure you have a survey id attached to it.</p>
             <a href="http://127.0.0.1:8000/admin/create_question/1/" class="btn btn-dark">View details</a>
             </div>
          </div>
