--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -24,16 +24,16 @@
                     Voting Booth
                 </div>
             </a>
-            <div class="top-banner" style="width:1000px">
+            <div class="top-banner" style="width:900px">
             </div>
             <div class="top-banner">
                 <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
-                    Dashboard
+                    DASHBOARD
                 </a>
             </div>
             <div class="top-banner">
                 <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/">
-                    Signout
+                    SIGN OUT
                 </a>
             </div>
         </div>
