--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -57,7 +57,7 @@
             <div class="card-body">
             <h4 class="card-title">Manage Questions</h4>
             <p class="card-text">You can select any number of question you want and publish them for polls.</p>
-            <a href="#" class="btn btn-dark">View details</a>
+            <a href="http://127.0.0.1:8000/admin/manage_question/" class="btn btn-dark">View details</a>
          </div>
         </div>
       </div>
