Updated create questions page
-removed unused buttons
-added padded

--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -29,18 +29,23 @@
                         <input class="w3-input" type="text" name="choice1text" placeholder="Choice 1">
                         <input class="w3-input" type="text" name="choice2text" placeholder="Choice 2">
 
-                        <div class="w3-row w3-padding-large">
-                            <button id="AddChoice" onclick="AddChoiceField()" class="w3-button w3-margin" style="width: 130px"><span
-                                    class="glyphicon glyphicon-plus-sign"></span> Add Choices
-                            </button>
-                            <br>
-                            <b2>Answer Type:</b2>
-                            <input class="w3-radio" type="radio" name="answertype" value="radio" checked>
-                            <label>Radio</label>
-                            <input class="w3-radio" type="radio" name="answertype" value="checkbox">
-                            <label>Checkbox</label>
-                        </div>
+
+{#                        REMOVING AS NO LONGER NEEDED#}
+{#                        <div class="w3-row w3-padding-large">#}
+{#                            <button id="AddChoice" onclick="AddChoiceField()" class="w3-button w3-margin" style="width: 130px"><span#}
+{#                                    class="glyphicon glyphicon-plus-sign"></span> Add Choices#}
+{#                            </button>#}
+{#                            <br>#}
+{#                            <b2>Answer Type:</b2>#}
+{#                            <input class="w3-radio" type="radio" name="answertype" value="radio" checked>#}
+{#                            <label>Radio</label>#}
+{#                            <input class="w3-radio" type="radio" name="answertype" value="checkbox">#}
+{#                            <label>Checkbox</label>#}
+{#                        </div>#}
+
+                        <div class="w3-row" style="padding-bottom: 20px; padding-top: 20px">
                         <input class="w3-button w3-padding-large w3-white w3-border" type="submit" value="Submit">
+                        </div>
                     </form>
                 </div>
             </div>
