--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header class="w3-container w3-center w3-padding-32">
         <h1><b>Create Question</b></h1>
-        <p>Survey: <span class="w3-tag">{{ survey_id }}</span></p>
+        <p>Survey: <span class="w3-tag">{{ survey_name }}</span></p>
     </header>
 
     <!-- Grid -->
