Manage Survey Page

--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -19,7 +19,7 @@
 <body>
 <!-- Title bar Dashboard -->
     <nav class="navbar navbar-light bg-light">
-         <span class="navbar-brand mb-0 h1"><H1>Dashboard</H1></b></span>
+         <span class="navbar-brand mb-0 h1"><H1>Dashboard</H1></span>
     </nav>
 <!-- Card view -->
 
@@ -55,9 +55,9 @@
          <div class="card" style="width:250px">
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
             <div class="card-body">
-            <h4 class="card-title">Manage Questions</h4>
-            <p class="card-text">You can select any number of question you want and publish them for polls.</p>
-            <a href="http://127.0.0.1:8000/admin/manage_question/1/" class="btn btn-dark">View details</a>
+            <h4 class="card-title">Manage Surveys</h4>
+            <p class="card-text">You can view all of the surveys here (Only 1 can be active at a time) Note: Manage Questions Page can also be found in here</p>
+            <a href="http://127.0.0.1:8000/admin/manage_survey/" class="btn btn-dark">View details</a>
          </div>
         </div>
       </div>
