ViewResults page and home page modifications, forget password page

--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -38,7 +38,7 @@
         </div>
      </div>
 
-    <div class="col-sm-3">
+     <div class="col-sm-3">
         <div class="card" style="width:250px">
             <a href="http://127.0.0.1:8000/admin/create_question/1/">
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
@@ -49,9 +49,9 @@
             <a href="http://127.0.0.1:8000/admin/create_question/1/" class="btn btn-dark">View details</a>
             </div>
          </div>
-    </div>
+     </div>
 
-      <div class="col-sm-3">
+        <div class="col-sm-3">
          <div class="card" style="width:250px">
             <img class="card-img-top" src="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}" alt="Card image" style="width:100%">
             <div class="card-body">
@@ -68,7 +68,7 @@
             <div class="card-body">
             <h4 class="card-title">Check Results</h4>
             <p class="card-text">You can check the results for the survey.The results will shown in percent for each given choice</p>
-            <a href="#" class="btn btn-dark">View details</a>
+            <a href="http://127.0.0.1:8000/admin/results/" class="btn btn-dark">View details</a>
          </div>
         </div>
       </div>
