--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -42,14 +42,21 @@
         Login
      </button>
     </div>
-    <button class="button" style="font-size:20px; margin-top: 20px;" tabindex=4>
+   <!--  <button class="button" style="font-size:20px; margin-top: 20px;" tabindex=4>
         Authenticate New User
     </button>
+     -->
+    <div>
+        <a href="http://127.0.0.1:8000/admin/forgot_password/" class="btn btn-dark" style="margin-left: 140px">Forgot Password?</a>
+    </div>
 <br><br>
-     <p> -- OR -- </p>
+    <!-- <p> -- OR -- </p>
     <a href="{% url 'social:begin' 'google-oauth2'%}">
         <button type="button" name="button" class="button" style="font-size:20px; margin-top: 20px;" tabindex=4>Google Login</button>
     </a>
+    -->
+
+
 </body>
 </html>
 
