made changes to CSS
Added spaces and mobile friendly buttons

--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -18,7 +18,7 @@
 
     <body>
         <div class="wrapper">
-            <a class="top-banner" style="text-decoration: none" href="/">
+             <a class="top-banner" style="text-decoration: none; width: 90%" href="/">
                 <div class="top-banner">
                     <img class ="logo" href="/" src ="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}">
                 </div>
@@ -26,15 +26,11 @@
                     Voting Booth
                 </div>
             </a>
-            <div class="top-banner" style="width:900px">
-            </div>
-            <div class="top-banner">
+            <div class="top-banner" style="width: 10%">
                 <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
                     DASHBOARD
                 </a>
-            </div>
-            <div class="top-banner">
-                <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/">
+                <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="/">
                     SIGN OUT
                 </a>
             </div>
