--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -2,9 +2,6 @@
 
 {% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-
 {% load static %}
 <head>
     <meta charset="UTF-8">
@@ -15,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'admin_back/dashboard.css' %}">
 </head>
 <body>
 <!-- Title bar Dashboard -->
@@ -75,5 +73,4 @@
     </div>
     </div>
 </body>
-</html>
 {% endblock %}
