modifications in results and forget password

--- a/admin_back/templates/admin_back/forgot_password.html
+++ b/admin_back/templates/admin_back/forgot_password.html
@@ -39,7 +39,7 @@
           <div class="row">
             <div class="col-md-5 forgot-form">
               <p>Please enter your email address below and we will send you information to change your password.</p>
-              <label class="label-default" for="un">Email Address</label> <input id="email_addy" name="email_addy" class="form-control" type="text"><br>
+              <label class="inline_label" for="un">Email Address</label> <input id="email_addy" name="email_addy" class="form-control" type="text"><br>
               <a id="mybad" class="btn btn-primary" role="button">Reset</a>
             </div>
             <div class="col-md-5 forgot-return" style="display:none;">
