view results page and home page modifications, forget password page

--- a/admin_back/templates/admin_back/forgot_password.html
+++ b/admin_back/templates/admin_back/forgot_password.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="highlighted" class="hl-basic hidden-xs">
-  <div class="container-fluid">
+  <div class="container-fluid" style="width: 600px">
     <div class="row">
       <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-3 col-lg-10 col-lg-offset-2">
         <h1>Forgot Password</h1>
@@ -19,7 +19,7 @@
           <div id="subMenu" class="panel panel-default">
             <ul class="subMenuHighlight panel-heading">
               <li class="subMenuHighlight panel-title" id="subMenuHighlight">
-                <a id="123" class="subMenuHighlight" href=""><span>Register</span></a>
+                <a id="123" class="subMenuHighlight" href="http://127.0.0.1:8000/admin/registration/"><span>Register</span></a>
               </li>
             </ul>
             
@@ -40,7 +40,7 @@
             <div class="col-md-5 forgot-form">
               <p>Please enter your email address below and we will send you information to change your password.</p>
               <label class="inline_label" for="un">Email Address</label> <input id="email_addy" name="email_addy" class="form-control" type="text"><br>
-              <a id="mybad" class="btn btn-primary" role="button">Reset</a>
+                <input type="submit" class="btn btn-primary" value="Reset">
             </div>
             <div class="col-md-5 forgot-return" style="display:none;">
               <h2>Reset Password Sent</h2>
