--- a/admin_back/templates/admin_back/user_registration.html
+++ b/admin_back/templates/admin_back/user_registration.html
@@ -1,8 +1,6 @@
 {% extends 'admin_back/base.html' %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Register user page</title>
@@ -16,46 +14,136 @@
 
 <body>
  <!--text box -->
-<div class="container">
-  <h2>User Registration</h2>
+<div class="container" style="width: 400px">
+  <h1>User Registration</h1>
     <p> All Fields Required</p>
-  <form action="/action_page.php">
-    <div class="form-group">
-      <label for="usr">First Name:</label>
-      <input type="text" class="form-control" id="usr" name="firstname">
-    </div>
-    <div class="form-group">
-      <label for="usr">Last Name:</label>
-      <input type="text" class="form-control" id="usr" name="lastname">
-    </div>
-    <div class="form-group">
-      <label for="usr">email Id:</label>
-      <input type="email" class="form-control" id="id_username" name="emailId">
-    </div>
-   <div class="form-group">
-      <label for="usertype">User type:</label>
-   </div>
-      <!-- check box-->
-    <div class="form-check-inline">
-        <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" value="">Option 1
-        </label>
-    </div>
-    <div class="form-check-inline">
-        <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" value="">Option 2
-        </label>
-    </div>
-    <div class="form-check-inline">
-        <label class="form-check-label">
-            <input type="checkbox" class="form-check-input" value="">Option 3
-        </label>
-    </div>
-    <div>
-      <p> </p>
-         <input type="submit" class="btn btn-dark" value="Submit">
-    </div>
-  </form>
+    <form method="POST" action="">
+        {% csrf_token %}
+
+             <div class="form-group">
+                <label for="{{ form.first_name.id_for_label_tag}}">
+                    {{ form.first_name.label }}
+                </label>
+                 <input type="text" id="{{ form.first_name.id_for_label }}"
+                            name="{{ form.first_name.html_name }}"
+                                {% if form.first_name.field.required %}required{% endif %}
+                                     class="form-control{% if form.first_name.errors %} is-invalid{% endif %}"
+                                        value="{% if form.first_name.value %}{{ form.first_name.value }}
+                                {% endif %}">
+                                {% if form.first_name.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.first_name.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.first_name.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+                 <div class="form-group">
+                <label for="{{ form.last_name.id_for_label_tag}}">
+                    {{ form.last_name.label }}
+                </label>
+                 <input type="text" id="{{ form.last_name.id_for_label }}"
+                            name="{{ form.last_name.html_name }}"
+                                {% if form.last_name.field.required %}required{% endif %}
+                                     class="form-control{% if form.last_name.errors %} is-invalid{% endif %}"
+                                        value="{% if form.last_name.value %}{{ form.last_name.value }}
+                                {% endif %}">
+                                {% if form.last_name.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.last_name.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.last_name.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+
+                 <div class="form-group">
+                <label for="{{ form.username.id_for_label_tag}}">
+                    {{ form.username.label }}
+                </label>
+                 <input type="text" id="{{ form.username.id_for_label }}"
+                            name="{{ form.username.html_name }}"
+                                {% if form.username.field.required %}required{% endif %}
+                                     class="form-control{% if form.username.errors %} is-invalid{% endif %}"
+                                        value="{% if form.username.value %}{{ form.username.value }}
+                                {% endif %}">
+                                {% if form.username.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.username.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.username.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+                 <div class="form-group">
+                <label for="{{ form.email.id_for_label_tag}}">
+                    {{ form.email.label }}
+                </label>
+                 <input type="text" id="{{ form.email.id_for_label }}"
+                            name="{{ form.email.html_name }}"
+                                {% if form.email.field.required %}required{% endif %}
+                                     class="form-control{% if form.email.errors %} is-invalid{% endif %}"
+                                        value="{% if form.email.value %}{{ form.email.value }}
+                                {% endif %}">
+                                {% if form.email.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.email.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.email.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+                 <div class="form-group">
+                <label for="{{ form.password1.id_for_label_tag}}">
+                    {{ form.password1.label }}
+                </label>
+                 <input type="password" id="{{ form.password1.id_for_label }}"
+                            name="{{ form.password1.html_name }}"
+                                {% if form.password1.field.required %}required{% endif %}
+                                     class="form-control{% if form.password1.errors %} is-invalid{% endif %}"
+                                        value="{% if form.password1.value %}{{ form.password1.value }}
+                                {% endif %}">
+                                {% if form.password1.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.password1.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.password1.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+                 <div class="form-group">
+                <label for="{{ form.password2.id_for_label_tag}}">
+                    {{ form.password2.label }}
+                </label>
+                 <input type="password" id="{{ form.password2.id_for_label }}"
+                            name="{{ form.password2.html_name }}"
+                                {% if form.password2.field.required %}required{% endif %}
+                                     class="form-control{% if form.password2.errors %} is-invalid{% endif %}"
+                                        value="{% if form.password2.value %}{{ form.password2.value }}
+                                {% endif %}">
+                                {% if form.password2.help_text %}
+                                    <small class="text-muted">
+                                        {{ form.password2.help_text }}
+                                    </small>
+                                {% endif %}
+
+                 {% for err in form.password2.errors %}
+                     <span class="invalid-feedback">{{ err }}</span>
+                 {% endfor %}
+             </div>
+
+        <input type="submit" name="Create User" class="btn btn-primary">
+    </form>
 </div>
 </body>
 </html>
