view results page and home page modifications, forget password page

--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -26,15 +26,17 @@
                     Voting Booth
                 </div>
             </a>
-            <div class="top-banner" style="width: 10%">
+                <div class="top-banner" style="width: 10%">
                 <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
                     DASHBOARD
                 </a>
+                <a class ="top-banner" style="font-size: 20px;text-decoration: none ; white-space: nowrap">Hello,{{ request.user }}</a>
                 <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="/">
                     SIGN OUT
                 </a>
-            </div>
-        </div>
+                </div>
+    </div>
+
     {% block content %}
     {% endblock content %}
     </body>
