--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 
     <head>
@@ -17,8 +17,8 @@
     </head>
 
     <body>
-        <div class="wrapper">
-             <a class="top-banner" style="text-decoration: none; width: 90%" href="/">
+        <nav class="navbar navbar-default navbar-fixed-top justify-content-between" style="background-color: black; padding: 5px">
+             <a class="top-banner" style="text-decoration: none;" href="/">
                 <div class="top-banner">
                     <img class ="logo" href="/" src ="{% static 'admin_back/assets/HuskyIcon_OneColor_Gold.png'%}">
                 </div>
@@ -26,16 +26,16 @@
                     Voting Booth
                 </div>
             </a>
-                <div class="top-banner" style="width: 10%">
-                <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
-                    DASHBOARD
-                </a>
-                <a class ="top-banner" style="font-size: 20px;text-decoration: none ; white-space: nowrap">Hello,{{ request.user }}</a>
-                <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="/">
-                    SIGN OUT
-                </a>
+                <div class="top-banner">
+                    <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
+                        DASHBOARD
+                    </a>
+                    <a class ="top-banner" style="font-size: 20px;text-decoration: none ; white-space: nowrap">Hello, {{ request.user }}</a>
+                    <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="/">
+                        SIGN OUT
+                    </a>
                 </div>
-    </div>
+        </nav>
 
     {% block content %}
     {% endblock content %}
