--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -3,21 +3,15 @@
 
 {% load static %}
 <head>
-    <meta charset="UTF-8">
     <title>Dashboard page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'admin_back/dashboard.css' %}">
 </head>
 <body>
 <!-- Title bar Dashboard -->
-    <nav class="navbar navbar-light bg-light">
-         <span class="navbar-brand mb-0 h1"><H1>Dashboard</H1></span>
-    </nav>
+
+         <a style="text-align: center;"><H1>Dashboard</H1></a>
+{#    <nav class="navbar navbar-light bg-light">#}
+{#    </nav>#}
 <!-- Card view -->
 
 <div class="container">
