--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -32,11 +32,11 @@
 
     <form method="POST" action="">
         {% csrf_token %}
-    <div class="login">
-     <input type="text" name="username" placeholder="username" class="form-row" style="margin-top: 20px" tabindex=1>
+    <div class="login" style="padding: 5px">
+     <input type="text" name="username" placeholder="username" class="form-row" style="margin: auto; " tabindex=1>
     </div>
-    <div>
-     <input type="password" placeholder="Password" name="password" class="form-row" style="margin-top: 20px" tabindex=2>
+    <div style="padding: 5px">
+     <input type="password" placeholder="Password" name="password" class="form-row" style="margin: auto;" tabindex=2>
     </div>
     <div>
      <button class="button" style="margin-top: 20px;" tabindex=3>
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-        <a href="http://127.0.0.1:8000/admin/forgot_password/" class="btn btn-dark" style="margin-left: 140px">Forgot Password?</a>
+        <a href="http://127.0.0.1:8000/admin/forgot_password/" style="margin-left: 140px">Forgot Password?</a>
     </div>
 
     <!-- <p> -- OR -- </p>
@@ -59,6 +59,5 @@
     </form>
 
 </body>
-</html>
 
 {% endblock %}
