Removed redundant headers
-removed redundant heads/bodys

--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -9,11 +9,7 @@
     text-align: center;
     }
 </style>
-<head>
-    <meta charset="UTF-8">
-    <title>Voting Booth Backend</title>
-</head>
-<body style="text-align: center">
+<div style="text-align: center">
 {#    removing as this is provided by base now#}
 {#    <div class="wrapper">#}
 {#        <div class="top-banner">#}
@@ -58,6 +54,6 @@
     -->
     </form>
 
-</body>
+</div>
 
 {% endblock %}
