--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -31,7 +31,7 @@
                         DASHBOARD
                     </a>
                     <a class ="top-banner" style="font-size: 20px;text-decoration: none ; white-space: nowrap">Hello, {{ request.user }}</a>
-                    <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="/">
+                    <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="{% url 'logout' %}">
                         SIGN OUT
                     </a>
                 </div>
