--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -38,7 +38,8 @@
 {#                        </div>#}
 
                         <div class="w3-row" style="padding-bottom: 20px; padding-top: 20px">
-                        <input class="w3-button w3-padding-large w3-white w3-border" type="submit" value="Submit">
+                        {# <input class="w3-button w3-padding-large w3-white w3-border" type="submit" value="Submit">#}
+                            <input class="btn btn-primary" type="submit" value="Submit">
                         </div>
                     </form>
                 </div>
