--- a/admin_back/templates/admin_back/password_reset.html
+++ b/admin_back/templates/admin_back/password_reset.html
@@ -39,15 +39,11 @@
           <div class="row">
             <div class="col-md-5 forgot-form">
               <p>Please enter your email address below and we will send you information to change your password.</p>
-              <label class="inline_label" for="un">Email Address</label> <input id="email_addy" name="email_addy" class="form-control" type="text"><br>
-                <input type="submit" class="btn btn-primary" value="Reset">
-            </div>
-            <div class="col-md-5 forgot-return" style="display:none;">
-              <h2>Reset Password Sent</h2>
-              <p>An email has been sent to your address with a reset password you can use to access your account.</p>
-            </div>
-          </div>
-        </div>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" class="btn btn-primary" value="Reset">
+                </form>
       </div>
     </div>
   </div>
