create question, autofilled the yes and no

--- a/admin_back/templates/admin_back/create_question.html
+++ b/admin_back/templates/admin_back/create_question.html
@@ -20,8 +20,8 @@
                         {% csrf_token %}
                         <h3><input class="w3-input" type="text" name="questiontext"
                                    placeholder="Write the question here"></h3>
-                        <input class="w3-input" type="text" name="choice1text" placeholder="Choice 1">
-                        <input class="w3-input" type="text" name="choice2text" placeholder="Choice 2">
+                        <input class="w3-input" type="text" name="choice1text" value="yes" readonly>
+                        <input class="w3-input" type="text" name="choice2text" value="no" readonly>
 
 
 {#                        REMOVING AS NO LONGER NEEDED#}
