--- a/admin_back/templates/admin_back/manage_survey.html
+++ b/admin_back/templates/admin_back/manage_survey.html
@@ -1,37 +1,45 @@
 {% extends 'admin_back/base.html' %}
 
+
 {% block content %}
+    <a style="text-align: center;"><H1>Manage Surveys</H1></a>
+
+<div class="container" align="center">
+    <div class="row justify-content-center">
+        <div class="col-sm-auto" style="width: 60px">
+            <h5>Active</h5>
+        </div>
+        <div class="col-sm-auto" style="width: 205px">
+            <h5>Survey Name</h5>
+        </div>
+        <div class="col-sm-auto">
+            <h5>Edit Survey</h5>
+        </div>
+        <div class="col-sm-auto">
+            <h5>Delete Survey</h5>
+        </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <div class="col-sm-auto" style="margin-left: -15px">
+            <input type="radio" value="active" id="active1" name="active">
+        </div>
+        <div class="col-sm-auto">
+            <input type="text" value="Survey 1" />
+        </div>
+        <div class="col-sm-auto" >
+            <button style="width:125px;" onclick="window.location.href = 'http://127.0.0.1:8000/admin/manage_question/1/'">Edit</button>
+        </div>
+        <div class="col-sm-auto">
+            <input type="button" value="Delete" onclick=""/><br/>
+        </div>
+    </div>
 
     <br>
-    <div id="Question"></div>
-    <h3>
-        <p class="text-center">Manage Surveys:</p>
-    </h3>
-
-    <label for="active1" style  ="width: 380px"></label>
-    <input type="radio" value="active" id="active1" name="active">
-    <input type="text" value="Survey 1" readonly/>
-    <button onclick="window.location.href = 'http://127.0.0.1:8000/admin/manage_question/1/'">edit</button>
-    <input type="button" value="delete" onclick=""/> <br/>
-
-    <label for="active2" style="width: 192px"></label>
-    <input style="background-color: gold" type="text" value="Active:" readonly/>
-    <input type="radio" value="active" id="active2" name="active">
-    <input type="text" value="Survey 2" readonly/>
-    <button onclick="window.location.href = 'http://127.0.0.1:8000/admin/manage_question/2/'">edit</button>
-    <input type="button" value="delete" onclick=""/>
-
-    <br>
-    <label for="active3" style="width: 380px"></label>
-    <input type="radio" value="active" id="active3", name="active">
-    <input type="text" value="Survey 3" readonly/>
-    <button onclick="window.location.href = 'http://127.0.0.1:8000/admin/manage_question/3/'">edit</button>
-    <input type="button" value="delete" onclick=""/>
     <br/>
-    <br>
-    <label for="ManageQuestions" style="width: 555px"></label>
     <button onclick="window.location.href = 'http://127.0.0.1:8000/admin/create_survey/'">Create New Survey</button>
-    </br>
+</div>
+
 
 
 
