CSS properly used in inheritance
Placed in head tags now instead of some bodies
Added block for styles in base file

--- a/admin_back/templates/admin_back/dashboard.html
+++ b/admin_back/templates/admin_back/dashboard.html
@@ -1,8 +1,11 @@
 {% extends 'admin_back/base.html' %}
 {% block content %}
 
-{% load static %}
+{% block styles %}
+    {{ block.super }}
+    {% load static %}
     <link rel="stylesheet" href="{% static 'admin_back/dashboard.css' %}">
+{% endblock %}
 
 <!-- Title bar Dashboard -->
 
