--- a/admin_back/templates/admin_back/loginauth.html
+++ b/admin_back/templates/admin_back/loginauth.html
@@ -1,11 +1,12 @@
 {% extends 'admin_back/base.html' %}
 
-{% block content %}
-
+{% block styles %}
+    {{ block.super }}
     {% load static %}
     <link href= "{% static 'admin_back/logincss.css'%}" rel="stylesheet">
+{% endblock %}
 
-
+{% block content %}
     <form class="box" action="loginauth.html" method="post">
         <h1> Login</h1>
         <input type="email" placeholder="MTU email">
