Added Recaptcha to user facing pages
Added recaptcha to user facing pages

--- a/admin_back/templates/admin_back/home.html
+++ b/admin_back/templates/admin_back/home.html
@@ -39,7 +39,15 @@
      <input type="password" placeholder="Password" name="password" class="form-row" style="margin: auto;" tabindex=2>
     </div>
     <div>
-     <button class="button" style="margin-top: 20px;" tabindex=3>
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <script src='https://www.google.com/recaptcha/api.js'></script>
+    <div style="text-align: center">
+        <div class="g-recaptcha" style="display: inline-block; padding-top: 10px" data-sitekey="6LdlyvIZAAAAAIKi5VQNWD53kskKuzUW5dB9Vfwj" tabindex=3></div>
+    </div>
+
+     <button class="button" style="margin-top: 20px;" tabindex=4>
         Login
      </button>
         {% for message in messages %}
