--- a/admin_back/templates/admin_back/password_reset.html
+++ b/admin_back/templates/admin_back/password_reset.html
@@ -42,8 +42,13 @@
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
+                    <script src='https://www.google.com/recaptcha/api.js'></script>
+
+                    <div class="g-recaptcha" style="display: inline-block; padding-top: 10px" data-sitekey="6LdlyvIZAAAAAIKi5VQNWD53kskKuzUW5dB9Vfwj" tabindex=3></div>
+
+                    </form>
                     <input type="submit" class="btn btn-primary" value="Reset">
-                </form>
+
       </div>
     </div>
   </div>
