--- a/admin_back/templates/admin_back/user_registration.html
+++ b/admin_back/templates/admin_back/user_registration.html
@@ -131,6 +131,13 @@
                  {% endfor %}
              </div>
 
+
+             <script src='https://www.google.com/recaptcha/api.js'></script>
+            <div style="text-align: center">
+                <div class="g-recaptcha" style="display: inline-block; padding-top: 10px" data-sitekey="6LdlyvIZAAAAAIKi5VQNWD53kskKuzUW5dB9Vfwj" tabindex=3></div>
+            </div>
+
+
         <input type="submit" name="Create User" class="btn btn-primary">
     </form>
 </div>
